+ Argument stopOnError in xcmsSet function that allows to perform feature
  detection on all files without stopping on errors.
+ Method showError for xcmsSet objects that list all errors during feature
  detection (if stopOnError = FALSE in the xcmsSet function).
+ [ method to subset xcmsRaw objects by scans.
+ profMat method to extract/create the profile matrix from/for an xcmsRaw.

BUG FIXES:
+ Fixed bug in rawMat (issue #58).
+ Fix issue #60: findPeaks.massifquant always returns a xcmsPeaks object.


CHANGES IN VERSION 1.49.7
-------------------------

BUG FIXES:
+ Fix documentation warnings.


CHANGES IN VERSION 1.49.6
-------------------------

USER VISIBLE CHANGES:
+ Peak Picking function findPeaks.centWaveWithPredictedIsotopeROIs() and findPeaks.addPredictedIsotopeFeatures(),
  which allow more sensitive detection of isotope features.

CHANGES IN VERSION 1.49.5
-------------------------

USER VISIBLE CHANGES:
+ Some documentation updates.
+ Preparation for a new binning function


CHANGES IN VERSION 1.49.4
-------------------------

BUG FIXES:
+ Fix getXcmsRaw that would prevent retention time correction to be applied
  (issue #44 reported by Aleksandr).


CHANGES IN VERSION 1.49.3
-------------------------

NEW FEATURE:
+ updateObject method for xcmsSet.

USER VISIBLE CHANGES:
+ xcms uses now BiocParallel for parallel processing. All other parallel
  processing functions have been deprecated.

BUG FIXES:
+ Added missing package imports.
+ Fix bug in fillPeaksChromPar referencing a non-existing variables i and
  object.
+ Fix bug in group.nearest: variable scoreList was mis-spelled (coreList).
+ Remove all DUP = FALSE from the .C calls as they are ignored anyways.

OTHER CHANGES
+ Re-organization of class, function and method definitions in R-files.
+ Use roxygen2 to manage the DESCRIPTION's collate field.


CHANGES IN VERSION 1.49.2
-------------------------

NEW FEATURE:

+ Initial support for exporint mzTab format. Since Changes are